[package]
name = "my-aoc23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r_1 = { path = "./r_1" }
r_2 = { path = "./r_2" }
r_3 = { path = "./r_3" }
r_4 = { path = "./r_4" }
r_5 = { path = "./r_5" }
r_6 = { path = "./r_6" }
r_7 = { path = "./r_7" }
r_8 = { path = "./r_8" }
